Fix spacing and height of covers with proper fleboxing

--- a/src/scss/common/_covers.scss
+++ b/src/scss/common/_covers.scss
@@ -1,3 +1,9 @@
+.covers-block .row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .cover-card {
   min-height: 440px;
   flex-basis: 100%;
@@ -8,6 +14,14 @@
   background-size: cover;
   background-position: center;
   color: $grey-80;
+
+  @include medium-and-up {
+    flex-basis: 48%;
+  }
+
+  @include large-and-up {
+    flex-basis: 32%;
+  }
 
   &:before {
     content: "";
